pushing up in broken state for date time picker button in availability chart + fixing the events/states alignment issue so that master can be merged

--- a/src/UXClient/Components/AvailabilityChart/AvailabilityChart.scss
+++ b/src/UXClient/Components/AvailabilityChart/AvailabilityChart.scss
@@ -167,6 +167,11 @@
             text-transform: capitalize;
             height: 32px;
             line-height: 32px;
+
+            .tsi-dateTimeButtonContainer {
+                margin-left: 8px;
+                width: 320px;
+            }
             .tsi-dateTimeButton {
                 height: 32px;
                 margin-left: 8px;
